[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GraphHDBSCAN-star"
version = "0.2.9"
description = "CoreSG + GraphHDBSCAN clustering package"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "OpenAI package scaffold from notebook"},
]
dependencies = [
  "numpy>=1.23",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "networkx>=3.0",
  "hdbscan>=0.8.33",
  "scanpy>=1.10",
  "PhenoGraph>=1.5.7",
  "umap-learn>=0.5.6",
  "ipython",
  "ipywidgets",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
